; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_sorted.c_lsmFlushTreeToDisk.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_sorted.c_lsmFlushTreeToDisk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@LSM_OK = common dso_local global i32 0, align 4
@TREE_BOTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lsmFlushTreeToDisk(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %4 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %5 = call i32 @lsmBeginWork(%struct.TYPE_8__* %4)
  store i32 %5, i32* %3, align 4
  br label %6

6:                                                ; preds = %16, %1
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @LSM_OK, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %6
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %12 = call i64 @sortedDbIsFull(%struct.TYPE_8__* %11)
  %13 = icmp ne i64 %12, 0
  br label %14

14:                                               ; preds = %10, %6
  %15 = phi i1 [ false, %6 ], [ %13, %10 ]
  br i1 %15, label %16, label %22

16:                                               ; preds = %14
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @sortedWork(%struct.TYPE_8__* %17, i32 256, i32 %20, i32 1, i32 0)
  store i32 %21, i32* %3, align 4
  br label %6

22:                                               ; preds = %14
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* @LSM_OK, align 4
  %25 = icmp eq i32 %23, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %22
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %28 = load i32, i32* @TREE_BOTH, align 4
  %29 = call i32 @sortedNewToplevel(%struct.TYPE_8__* %27, i32 %28, i32 0)
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %26, %22
  %31 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %32 = call i32 @lsmFinishWork(%struct.TYPE_8__* %31, i32 1, i32* %3)
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @lsmBeginWork(%struct.TYPE_8__*) #1

declare dso_local i64 @sortedDbIsFull(%struct.TYPE_8__*) #1

declare dso_local i32 @sortedWork(%struct.TYPE_8__*, i32, i32, i32, i32) #1

declare dso_local i32 @sortedNewToplevel(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i32 @lsmFinishWork(%struct.TYPE_8__*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
